--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
   <meta charset="utf-8">
   <title>TinDog</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +12,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/1c930b56b9.js" crossorigin="anonymous"></script>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
   <section id="title">
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01">
           <span class="navbar-toggler-icon"></span>
@@ -46,17 +46,35 @@
           </ul>
         </div>
       </div>
-    </nav>
-
+    </nav> -->
     <div class="container">
-
-
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" style="font-family: Ubuntu; color:white; font-size:2rem;" href="#">tindog</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" id ="menu">
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; margin-left: 30px;" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; margin-left: 30px;" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; margin-left: 30px;"s href="#">Pricing</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
       <!-- Title -->
 
       <div class="row">
         <div class="col-lg-6 title-text">
-          <h1 style="font-size: 4rem; font-weight: bolder; color: white;">Meet new and interesting dogs nearby.</h1>
+          <h1 class="heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="download-buttton btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i>
             Download</button>
           <button type="button" class="download-buttton btn btn-outline-light btn-lg"><i
@@ -76,7 +94,7 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="row features-row">
+    <div class="features-row row">
       <div class="col-lg-4">
         <i class="fa-solid fa-circle-check fa-3x icon"></i>
         <h3>Easy to use.</h3>
