title section bug fix

--- a/index.html
+++ b/index.html
@@ -24,32 +24,8 @@
 <body>
 
   <section id="title">
-
-    <!-- Nav Bar -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="#">tindog</a>
-          <ul class="navbar-nav ms-auto menu">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Download</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
     <div class="container">
       <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
           <a class="navbar-brand" style="font-family: Ubuntu; color:white; font-size:2rem;" href="#">tindog</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -57,17 +33,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav" id ="menu">
               <li class="nav-item">
-                <a class="nav-link" style="color: white; margin-left: 30px;" href="#">Home</a>
+                <a class="nav-link" style="color: white; margin-left: 30px;" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: white; margin-left: 30px;" href="#">Features</a>
+                <a class="nav-link" style="color: white; margin-left: 30px;" href="#cta">Download</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: white; margin-left: 30px;"s href="#">Pricing</a>
+                <a class="nav-link" style="color: white; margin-left: 30px;" href="#pricing">Pricing</a>
               </li>
             </ul>
           </div>
-        </div>
       </nav>
 
       <!-- Title -->
